[package]
name = "bevy-pigeon"
version = "0.3.0"
authors = ["Mitchell Marino <mitchoah@gmail.com>"]
edition = "2021"
description = "The bevy plugin for carrier-pigeon."
readme = "README.md"
repository = "https://github.com/MitchellMarinoDev/bevy-pigeon/"
license = "MIT OR Apache-2.0"
keywords = ["game", "gamedev", "networking", "bevy"]
categories = ["game-development", "network-programming"]
autoexamples = false

[[example]]
name = "mvp"

[[example]]
name = "player"

[dev-dependencies]
bevy = "~0.7.0"

[dependencies]
carrier-pigeon = { git = "https://github.com/mitchellmarinodev/carrier-pigeon" }
bevy = { version = "~0.7.0", default-features = false }
serde = { version = "~1.0", features = ["derive"] }

[features]
default = ["types"]
types = ['bevy/render']
